src/objects/Apttus_Billing__InvoiceTaxBreakup__c.object
<CustomObject>
    <description>Represents the tax breakup for an Invoice (which is an aggregation of the Invoice Line Item Tax Breakups).</description>
    <fields>
        <fullName>Apttus_Billing__BreakupType__c</fullName>
        <description>The tax breakup type</description>
        <inlineHelpText>The tax breakup type</inlineHelpText>
        <label>Breakup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detail</fullName>
                    <default>true</default>
                    <label>Detail</label>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceId__c</fullName>
        <description>ID of the associated Invoice</description>
        <inlineHelpText>ID of the associated Invoice</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Tax Breakups</relationshipLabel>
        <relationshipName>InvoiceTaxBreakups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Sequence__c</fullName>
        <description>The breakup sequence</description>
        <inlineHelpText>The breakup sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxAmount__c</fullName>
        <description>The tax amount</description>
        <inlineHelpText>The tax amount</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxAppliesTo__c</fullName>
        <description>Indicates the price field the tax rate was applied to.</description>
        <inlineHelpText>Indicates the price field the tax rate was applied to.</inlineHelpText>
        <label>Tax Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxRate__c</fullName>
        <description>The tax rate</description>
        <inlineHelpText>The tax rate</inlineHelpText>
        <label>Tax Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxType__c</fullName>
        <description>The tax type</description>
        <inlineHelpText>The tax type</inlineHelpText>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City Tax</fullName>
                </value>
                <value>
                    <fullName>County Tax</fullName>
                </value>
                <value>
                    <fullName>District Tax</fullName>
                </value>
                <value>
                    <fullName>State Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Tax Breakup</label>
    <nameField>
        <displayFormat>ILITB-{00000000}</displayFormat>
        <label>Breakup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Tax Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>